<resources>
    <string name="app_name">Weatherapp</string>
    <string name="city_name">St. Paul, MN</string>
    <string name="current_temp">72°</string>
    <string name="low">Low %d°</string>
    <string name="feels_like">Feels like %d°</string>
    <string name="high">High %d°</string>
    <string name="humidity">Humidity %d%%</string>
    <string name="pressure">Pressure %dhPa</string>
    <string name="degree_temp">%d°</string>
    <string name="forecast">Forecast</string>
    <string name="sunrise">Sunrise: %s</string>
    <string name="sunset">Sunset: %s</string>
    <string name="temperature">%s°</string>
</resources>